allow user to view message's sent date

--- a/UI/css/messages.css
+++ b/UI/css/messages.css
@@ -143,8 +143,9 @@ main .message {
     line-height: 25px;
 }
 
-main .sender p {
-    /* float: left; */
+main .sender span {
+    float: left;
+    margin-right: 100px;
 }
 
 /* footer */
