--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -50,63 +50,103 @@ header a {
 
 /* main content */
 
-main {
-    margin-top: 10px;
-}
-
-main h3 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
-    float: left;
-    margin-left: 50px;
-    padding-top: 150px;
-    
-}
-
-/* main .icon {
-    float: right;
-    width: 500px;
-    height: 300px;
-    background-image: url('/register-icon.png');
+/* INDEX */
+.index-banner{
+    width: 100%;
+    height: calc(100vh - 150px) ;
+    background-image: url('../assets/emailservice.jpg');
     background-repeat: no-repeat;
-} */
-
-form {
-    padding: 30px;
-    margin: 0 auto;
-    width: 30%;
-    border: 2px solid rgb(190, 187, 187);
-    border-radius: 20px;
-}
-form label {
-    width: 100%;
-    line-height: 30px;
-    font-size: 20px;
+    background-position: center;
+    background-size: cover;
+    margin-top: -12%;
+    display: table;
 }
 
-form input {
-    font-size: 15px;
-    height: 40px;
-    border: none;
-    width: 100%;
-    padding: 7px 0;
-    border-bottom: 2px solid rgb(212, 165, 165);
+.vertical-center {
+    display: table-cell;
+    vertical-align: middle;
 }
 
-form input[type = "submit"] {
-    border: none;
-    border-radius: 7px;
-    margin-top: 10px;
-    width: 30%;
-    background-color: #DB2B30;
-    font-size: 20px;
+.index-banner h2{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 60px;
+    color: #fff;
+    font-weight: 700;
+    line-height: 70px;
+
+    text-align: center;
+    text-shadow: 2px 2px 8px #111;    
+}
+
+.index-banner h1{
+    /* margin-top: -12%; */
+    font-family: Cormorant Garamond;
+    font-size: 28px;
+    color: #fff;
+    line-height: 40px;
+    font-weight: 100;
     font-style: italic;
+    text-align: center;
+    text-shadow: 2px 2px 8px #111;    
 }
 
-form p {
-    font-size: 20px;
-    float: right;
+.index-links div {
+    margin: 16px 16px 0;
+    width: calc(100% - 32px);
+    height: 100px;
+    background-color: #f2f2f2;
 }
+
+.index-links div h3{
+    font-family: Catamarant;
+    font-size: 28px;
+    color: #111;
+    line-height: 100px;
+    font-weight: 600;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+
+@media only screen and (min-width: 1000px) {
+    .wrapper {
+        width: 1000px;
+        margin: 0 auto;
+    }
+
+    .index-banner{
+        height: 400px;
+    }   
+    .index-banner h1{
+        display: block;
+        width: 650px;
+        margin: 0 auto;    
+    }
+
+    .index-links {
+        padding-bottom: 10px;
+        overflow: hidden;
+    }
+
+    .index-links div {
+        margin: 20px 10px 0px;
+        height: 230px;
+        background-color: #f2f2f2;
+        float: left;
+    }
+
+    .index-boxlink-square {
+        width: calc(25% - 20px) !important;        
+    }
+    .index-boxlink-rectangle {
+        width: calc(50% - 20px) !important;        
+    }
+
+    .index-links div h3{
+        line-height: 190px;
+    }
+}
+
 
 /* footer */
 
