--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -164,3 +164,52 @@ footer p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
 }
+@media only screen and (max-width: 1000px) {
+*{
+    text-decoration: none;
+}
+
+/* body{
+    background-color: #f3f3f3;
+} */
+header{
+    width: 100%;
+    height: 250px;
+}
+
+
+header .header-brand{
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+   font-size: 24px;
+   font-weight: 900;
+   color: #111; 
+   text-transform: uppercase;
+   display: block;
+   text-align: center;
+   border: none;
+}
+
+header nav ul {
+    display: block;
+    width: fit-content;
+}
+
+header nav ul li {
+    display: inline-block;
+    float: left;
+    list-style: none;
+    padding: 0 16px;
+}
+
+header nav ul li a {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+   font-size: 16px;
+   text-transform: uppercase;
+   line-height: 40px;
+   overflow: visible;
+}
+
+header .header-cases {
+    display: none;
+}
+}
