--- a/UI/css/register.css
+++ b/UI/css/register.css
@@ -123,3 +123,97 @@ footer p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
 }
+
+@media only screen and (max-width: 1000px) {
+    *{
+        text-decoration: none;
+    }
+
+    main h3 {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 30px;
+        display: none;
+        
+    }
+
+    form {
+        margin-bottom: 80px;
+        overflow: hidden;
+        width: 50%;
+        border: 2px solid rgb(190, 187, 187);
+        border-radius: 20px;
+    }
+    form label {
+        width: 100%;
+        line-height: 30px;
+        font-size: 20px;
+    }
+    
+    form input {
+        font-size: 15px;
+        height: 40px;
+        border: none;
+        width: 100%;
+        padding: 7px 0;
+        border-bottom: 2px solid rgb(212, 165, 165);
+    }
+    
+    form input[type = "submit"] {
+        border: none;
+        border-radius: 7px;
+        margin-top: 10px;
+        width: 30%;
+        background-color: #DB2B30;
+        font-size: 20px;
+        font-style: italic;
+    }
+    
+    form p {
+        /* font-size: 20px; */
+    }
+    
+    /* body{
+        background-color: #f3f3f3;
+    } */
+    header{
+        width: 100%;
+        height: 180px;
+    }
+    
+    
+    header .header-brand{
+       font-family: Verdana, Geneva, Tahoma, sans-serif;
+       font-size: 24px;
+       font-weight: 900;
+       color: #111; 
+       text-transform: uppercase;
+       display: block;
+       text-align: center;
+       border: none;
+       
+    }
+    
+    header nav ul {
+        display: block;
+        width: fit-content;
+    }
+    
+    header nav ul li {
+        display: inline-block;
+        float: left;
+        list-style: none;
+        padding: 0 16px;
+    }
+    
+    header nav ul li a {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+       font-size: 16px;
+       text-transform: uppercase;
+       line-height: 40px;
+       overflow: visible;
+    }
+    
+    header .header-cases {
+        display: none;
+    }
+}
