--- a/UI/css/passwordreset.css
+++ b/UI/css/passwordreset.css
@@ -111,7 +111,7 @@ form p {
 /* footer */
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: calc(100% - 80px);
     margin-top: 20px;
@@ -125,4 +125,84 @@ footer {
 footer p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
+}
+@media only screen and (max-width: 1000px) {
+    *{
+        text-decoration: none;
+    }
+
+    main h3 {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 30px;
+        display: none;
+        
+    }
+
+    form {
+        margin-bottom: 80px;
+        overflow: hidden;
+        width: 50%;
+        border: 2px solid rgb(190, 187, 187);
+        border-radius: 20px;
+    }
+    form label {
+        width: 100%;
+        line-height: 30px;
+        font-size: 20px;
+    }
+    
+    form input {
+        font-size: 15px;
+        height: 40px;
+        border: none;
+        width: 100%;
+        padding: 7px 0;
+        border-bottom: 2px solid rgb(212, 165, 165);
+    }
+    
+    form input[type = "submit"] {
+        border: none;
+        border-radius: 7px;
+        margin-top: 10px;
+        width: 100%;
+        background-color: #DB2B30;
+        font-size: 20px;
+        font-style: italic;
+    }
+    
+    header{
+        width: 100%;
+        height: 70px;
+    }
+    
+    
+    header .header-brand{
+       font-family: Verdana, Geneva, Tahoma, sans-serif;
+       font-size: 24px;
+       color: #111; 
+       text-transform: uppercase;
+       display: block;
+       text-align: center;
+       border: none;
+    }
+    
+    header nav ul {
+        margin-top: -60px;
+        width: fit-content;
+    }
+    
+    header nav ul li {
+        display: inline-block;
+        list-style: none;
+    }
+    
+    header nav ul li a {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+       font-size: 16px;
+       text-transform: uppercase;
+    }
+    
+    header .header-cases {
+        display: none;
+    }
 }
