--- a/UI/css/messages.css
+++ b/UI/css/messages.css
@@ -213,7 +213,7 @@ float: right;
 /* footer */
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: calc(100% - 80px);
     margin-top: 20px;
@@ -227,4 +227,58 @@ footer {
 footer p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
+}
+
+@media only screen and (max-width: 1000px) {
+    main .content {
+        width: 100%;
+        margin-bottom: 80px;
+    }
+    header nav ul{
+        margin-top: -80px;
+        margin-right: 50px;
+    }
+
+    main .left-bar {
+        padding-top:0; 
+        width: 100%;
+        height: 150px;
+    }
+    
+    main nav ul li {
+        display: inline-block;
+    }
+    
+    main nav ul li[class="active"] {
+        border-left: none;
+        border-top: 5px solid black;
+    }
+
+    main form .save,main form button[type = "submit"]{
+        width: 40%;
+    }
+
+    main .sender span {
+        float: left;
+        margin-right: 100px;
+    }
+    
+    main form {
+        margin-left: 30px;
+        border: 2px solid rgb(190, 187, 187);
+        border-radius: 20px;
+    }
+    
+    main form label {
+        line-height: 40px;
+        font-size: 20px;
+    }
+    
+    main form input {
+        width: 100%;
+    }
+    
+    main form select {
+        width: 100%;
+    }
 }
